--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,4 +58,11 @@
       margin-bottom: 30px;
     }
   }
+
+  .header {
+    display:flex;
+    border-bottom: 2px dashed #C0C0C0;
+    padding-bottom: 2%;
+    padding-top: 2%;
+  }
 }// home
