--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,14 @@
 // Navigation Styles here
+
+nav {
+    display:flex;
+    font-size: 20px;
+    justify-content: space-evenly;
+    margin-left: 40%;
+    a {
+        margin-left: 15%;
+        text-decoration: none;
+        color: black;
+        padding-top: 5%;
+    }
+}
