--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,4 @@
 // Navigation Styles here
-
 nav {
     display:flex;
     font-size: 20px;
@@ -10,5 +9,8 @@ nav {
         text-decoration: none;
         color: black;
         padding-top: 5%;
+    }
+    @media @mobile{
+        
     }
 }
