--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+
+.btnmixin (@button-bg, @width:200px, @white){
+        display: block;
+        background-color: @button-bg;
+        margin: 0 10px 20px;
+        width: @width;
+        height: 45px;
+        font-size: 3rem;
+        border-radius: 10px;
+        color:@white;
+}      
