--- a/less/home-page.less
+++ b/less/home-page.less
@@ -71,6 +71,8 @@
       flex-wrap: wrap;
       flex-direction: column;
       text-align:center;
+      width: 100% !important;
+      margin-left: 0 !important;
     }
   }
 
