--- a/css/index.css
+++ b/css/index.css
@@ -203,6 +203,7 @@ nav a {
   padding: 20px;
 }
 .home .content-section {
+  border: 1px solid red;
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
@@ -220,6 +221,7 @@ nav a {
   border-radius: 10px;
 }
 .home .inverse-content {
+  border: 1px solid black;
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
@@ -235,7 +237,7 @@ nav a {
     width: 100%;
   }
   .home .inverse-content .img-content {
-    order: 2     ;
+    order: 2;
     width: 100%;
     padding: 2%;
   }
@@ -256,6 +258,7 @@ nav a {
   border-radius: 10px;
 }
 .home .content-pick {
+  border: 1px solid green;
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
@@ -295,6 +298,7 @@ nav a {
   }
 }
 .home .header {
+  border: 1px solid purple;
   display: flex;
   border-bottom: 2px dashed #C0C0C0;
   padding-bottom: 2%;
@@ -321,19 +325,22 @@ nav a {
   border-bottom: 2px dashed #C0C0C0;
   margin-bottom: 3%;
 }
+.home .letsgo {
+  border: 1px solid blue;
+  display: flex;
+}
 @media (max-width: 500px) {
   .home .letsgo {
-    width: 100%;
     flex-direction: column;
+    width: 100%;
+    padding: 0 2%;
   }
   .home .letsgo .text-content {
-    order: 1;
     width: 100%;
-    padding: 2%;
+    /*padding: 2%;*/
   }
   .home .letsgo .img-content {
-    order: 2;
     width: 100%;
-    padding: 2%;
+    /*padding: 2%;*/
   }
 }
