--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,8 @@
 .home {
+  
 
   .content-section {
+    border: 1px solid red;
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
@@ -23,6 +25,7 @@
   }
 
   .inverse-content {
+    border: 1px solid black;
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
     @media @mobile {
@@ -35,7 +38,7 @@
         width: 100%;
       }
       .img-content {
-        order: 2     ;
+        order: 2;
         width: 100%;
         padding: 2%;
       }
@@ -61,6 +64,7 @@
   }
 
   .content-pick {
+    border: 1px solid green;
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
@@ -92,6 +96,7 @@
   }
 
   .header {
+    border: 1px solid purple;
     display:flex;
     border-bottom: 2px dashed @silver;
     padding-bottom: 2%;
@@ -120,16 +125,15 @@
   }
 
   .letsgo {
+    border: 1px solid blue;
     @media @mobile {
       width: 100%;
       flex-direction: column;
       .text-content {
-        order: 1;
         width: 100%;
         padding: 2%;
       }
       .img-content {
-        order: 2;
         width: 100%;
         padding: 2%;
       }
